--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,11 @@
 services:
   - type: web
-    name: primeupdate
+    name: primeupdates-ke
     env: python
-    buildCommand: ""
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "python app.py"
-    plan: free
     envVars:
       - key: FLASK_ENV
         value: production
+    plan: free
+
